--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ before_script:
   - yarn add global nyc
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
+  - "./cc-test-reporter before-build"
 
 script:
-  - nyc --reporter=lcov yarn run test --watchAll
+  - nyc --reporter=lcov yarn run test:ci
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
 
 notifications:
   email: false
