--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "coveralls": "^3.0.6",
-    "materialize-css": "^1.0.0-rc.2",
+    "codacy-coverage": "^3.4.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -14,10 +15,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "CI=true react-scripts test --coverage --env=jsdom",
     "test:ci": "CI=true react-scripts test --env=jsdom",
+    "coverage": "CI=true react-scripts test --testPathIgnorePatterns='/index.js' --env=jsdom --coverage && cat ./coverage/lcov.info | codacy-coverage --token=5d454513b47d4493bbd26dcf78e8c24b",
     "cypress": "cypress open",
-    "coverage": "nyc npm run test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,7 +38,6 @@
   },
   "devDependencies": {
     "cypress": "^3.4.1",
-    "enzyme": "^3.10.0",
     "enzyme-adapter-react-15": "^1.4.0",
     "nyc": "^14.1.1"
   },
