--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.2",
     "codacy-coverage": "^3.4.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -37,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.2.1",
     "cypress": "^3.4.1",
     "enzyme-adapter-react-15": "^1.4.0",
     "nyc": "^14.1.1"
